<resources>
    //welcome page
    <string name="app_name">DrivePro</string>
    <string name="welcomeTxt">Welcome back to the app!</string>
    <string name="sloganTxt">Experience the freedom of the open road</string>
    <string name="btnWelLogin">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_image">Welcome Image</string>

    //register page
    <string name="welcome_background">Welcome Background</string>
    <string name="registerTxt">Create an Account</string>
    <string name="regName">Your Name</string>
    <string name="regEmail">Your Email</string>
    <string name="regPhone">Your Phone Number</string>
    <string name="regPassword">Password</string>
    <string name="regQuestion">Why Are You Here? to:</string>
    <string name="regInputName">Enter Your Name</string>
    <string name="regInputEmail">Enter Your Email</string>
    <string name="regInputPassword">Create a Password</string>
    <string name="regInputPhone">Enter Your Phone Number</string>
    <string name="btnRegister">Register</string>
    <string name="regImg">Register Image</string>
    <string name="regBackground">Register Background</string>

    //login Page
    <string name="loginHeadingEmail">Your Email</string>
    <string name="loginHeadingPassword">Your Password</string>
    <string name="loginInputEmail">Enter Your Email</string>
    <string name="loginInputPassword">Enter Your Password</string>
    <string name="btn_login">Login</string>
    <string name="gorgotPass">Forget Password?</string>
    <string name="LoginChnage">or</string>
    <string name="loginText">Login to Your Account</string>
    <string name="loginImg">Login Image</string>
    <string name="loginBackground">Login Background</string>

    //profile Managing Page
    <string name="profileUser">User_name</string>
    <string name="userRole">User Profile</string>
    <string name="profileWidgetsHelp">Help</string>
    <string name="profileWidgetsWallet">Wallet</string>
    <string name="profileWidgetsTrips">Trips</string>
    <string name="profileUpdateWidgetsHelp">Help</string>
    <string name="profileUpdateWidgetsWallet">Wallet</string>
    <string name="profileUpdateWidgetsDrive">Drive</string>
    <string name="profilefull_name">Full Name</string>
    <string name="profileEmail_adress">Email Adress</string>
    <string name="profileContact_number">Contact Number</string>
    <string name="profileGender">Gender</string>
    <string name="profileBirthday">Birthday</string>
    <string name="profileUser_name">User_name</string>
    <string name="profileUser_name_gmail_com">User_name@gmail.com</string>
    <string name="profilePhone">070 000 0000</string>
    <string name="ProfiileVehicle_count">Vehicle Count</string>
    <string name="ProfilePlease_update_your_vehicle_count">Please Update Your Vehicle Count</string>
    <string name="ProfileLanguages">Languages</string>
    <string name="profileFull_name">Full Name</string>
    <string name="ProfileEmail_adress">Email Adress</string>
    <string name="ProfileContact_number">Contact Number</string>
    <string name="ProfilePlease_update_your_language">Please Update Your Language</string>
    <string name="btnProfileUpdate_profile">UPDATE PROFILE</string>
    <string name="btnProfileLog_out">LOG OUT</string>
    <string name="userRoleDrivers_profile">Drivers Profile</string>
    <string name="userProfileUser_name">User_name</string>
    <string name="userProfileUser_name_gmail_com">User_name@gmail.com</string>
    <string name="userProfilePhone">070 000 0000</string>
    <string name="userProfilePease_update_your_gender">Please Update Your Gender</string>
    <string name="userProfilePlease_update_your_birthday">Please Update Your Birthday</string>
    <string name="btnUserProfileUpdate_profile">UPDATE PROFILE</string>
    <string name="userProfileLog_out">LOG OUT</string>
    <string name="updateProfileDriverName">User_name</string>
    <string name="updateProfileRole">Drivers Profile</string>
    <string name="updateProfileDriverHeading">PROFILE UPDATE</string>
    <string name="UpdateProfileDriverName">Full Name</string>
    <string name="UpdateProfileDriveNameValue">Enter Your New Name</string>
    <string name="UpdateProfileDriveEmail">Email Adress</string>
    <string name="UpdateProfileDriveEmailValue">Enter Your New Email Adress</string>
    <string name="UpdateProfileDriveContact">Contact Number</string>
    <string name="UpdateProfileDriveContactValue">Enter Your New Contact Number</string>
    <string name="UpdateProfileDriveVehicle">Vehicle Count</string>
    <string name="UpdateProfileDriveVehicleValue">Enter Your Vehicle Count</string>
    <string name="UpdateProfileDriveLanguage">Languages</string>
    <string name="UpdateProfileDriveLanguageValue">Enter Your New Speakable Languages</string>
    <string name="btnUpdateProfileConfirm">CONFIRM</string>
    <string name="btnUpdateProfileDelete">DELETE PROFILE</string>
    <string name="updateProfileUserName">User_name</string>
    <string name="updateProfileUserRole">User Profile</string>
    <string name="updateProfileUserHeading">PROFILE UPDATE</string>
    <string name="updateProfileUserFullName">Full Name</string>
    <string name="updateProfileUserNameValue">Enter Your New Name</string>
    <string name="updateProfileUserEmail">Email Adress</string>
    <string name="updateProfileUserEmailValue">Enter Your New Email Adress</string>
    <string name="pdateProfileUserContact">Contact Number</string>
    <string name="pdateProfileUserContactValue">Enter Your New Contact Number</string>
    <string name="pdateProfileUserGender">Gender</string>
    <string name="pdateProfileUserGenderValue">Enter Your Gender</string>
    <string name="pdateProfileUserBirthday">Birthday</string>
    <string name="updateProfileUserBirthdayValue">Enter Your Birthday</string>
    <string name="btnUpdateProfileUserConfirm">CONFIRM</string>
    <string name="btnUpdateProfileUserDelete">DELETE PROFILE</string>
</resources>