<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverProfileUpdateActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/profileUpdateBacgroundWidth"
        android:layout_height="@dimen/profileUpdateBacgroundHeight"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/update_background" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateProfileDriverName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateProfileRole"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="233dp"
        android:layout_height="43dp"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/updateProfileDriverHeading"
            android:textAlignment="center"
            android:textColor="@color/smalt_blue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="481dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ProfileUpdateHeadingMarginStart"
            android:layout_marginTop="@dimen/ProfileUpdateHeadingMarginTop"
            android:text="@string/UpdateProfileDriverName"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/ProfileUpdateHeadingTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profileUpdateInputHeight"
            android:layout_marginStart="@dimen/profileUpdateInputMarginStart"
            android:layout_marginTop="@dimen/profileUpdateInputMarginTop"
            android:layout_marginEnd="@dimen/profileUpdateInputMarginEnd"
            android:ems="10"
            android:hint="@string/UpdateProfileDriveNameValue"
            android:inputType="textPersonName"
            android:padding="@dimen/profileUpdateInputPadding" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ProfileUpdateHeadingMarginStart"
            android:layout_marginTop="@dimen/ProfileUpdateHeadingMarginTop"
            android:text="@string/UpdateProfileDriveEmail"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/ProfileUpdateHeadingTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/UpdateProfileDriveEmailValue"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <TextView
            android:id="@+id/EtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ProfileUpdateHeadingMarginStart"
            android:layout_marginTop="@dimen/ProfileUpdateHeadingMarginTop"
            android:text="@string/UpdateProfileDriveContact"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/ProfileUpdateHeadingTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/UpdateProfileDriveContactValue"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tvVehicleCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ProfileUpdateHeadingMarginStart"
            android:layout_marginTop="@dimen/ProfileUpdateHeadingMarginTop"
            android:text="@string/UpdateProfileDriveVehicle"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/ProfileUpdateHeadingTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etVCountunt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/UpdateProfileDriveVehicleValue"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ProfileUpdateHeadingMarginStart"
            android:layout_marginTop="@dimen/ProfileUpdateHeadingMarginTop"
            android:text="@string/UpdateProfileDriveLanguage"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/ProfileUpdateHeadingTextSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLanguage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/UpdateProfileDriveLanguageValue"
            android:inputType="textPersonName"
            android:padding="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/buttonProfileMarginStart"
            android:layout_marginTop="@dimen/buttonProfileUpdateMarginTop"
            android:layout_marginEnd="@dimen/buttonProfileMarginEnd"
            android:background="@drawable/background_btn"
            android:text="@string/btnUpdateProfileConfirm"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_wel_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDlt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/logout_btn"
            android:text="@string/btnUpdateProfileDelete"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_wel_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>